--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_Types_Generated_Consumer.g.ts.cmp
@@ -9,6 +9,10 @@ import Utils = Ambrosia.Utils;
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
+/**
+Test File to test all the Types for typescripts
+Has the basic types
+ */
 export namespace Test
 {
     /*********** Enum type (numeric enum - strings as number) as return */
@@ -67,7 +71,11 @@ export namespace Test
         }
     }
 
-    /************* Primitives - bool, string, number, array */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * *********** Primitives - bool, string, number, array
+     */
     export function BasicTypes_PostFork(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
@@ -79,7 +87,11 @@ export namespace Test
             IC.arg("notSure?", notSure));
     }
 
-    /************* Primitives - bool, string, number, array */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * *********** Primitives - bool, string, number, array
+     */
     export function BasicTypes_PostImpulse(callContextData: any, isFalse: boolean, height: number, mystring?: string, mystring2?: string, my_array?: number[], notSure?: any): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "BasicTypes", 1, POST_TIMEOUT_IN_MS, callContextData, 
@@ -91,31 +103,51 @@ export namespace Test
             IC.arg("notSure?", notSure));
     }
 
-    /********* Function using / returning Numeric Enum */
+    /**
+     * *Note: The result (PrintMedia) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function using / returning Numeric Enum
+     */
     export function getMedia_PostFork(callContextData: any, mediaName: string): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
     }
 
-    /********* Function using / returning Numeric Enum */
+    /**
+     * *Note: The result (PrintMedia) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function using / returning Numeric Enum
+     */
     export function getMedia_PostImpulse(callContextData: any, mediaName: string): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "getMedia", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("mediaName", mediaName));
     }
 
-    /************* Void type */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * *********** Void type
+     */
     export function warnUser_PostFork(callContextData: any): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    /************* Void type */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * *********** Void type
+     */
     export function warnUser_PostImpulse(callContextData: any): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "warnUser", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    /************** Example of a [post] method that uses custom types. */
+    /**
+     * *Note: The result (Names) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ************ Example of a [post] method that uses custom types.
+     */
     export function makeName_PostFork(callContextData: any, firstName?: string, lastName?: string): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
@@ -123,7 +155,11 @@ export namespace Test
             IC.arg("lastName?", lastName));
     }
 
-    /************** Example of a [post] method that uses custom types. */
+    /**
+     * *Note: The result (Names) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ************ Example of a [post] method that uses custom types.
+     */
     export function makeName_PostImpulse(callContextData: any, firstName?: string, lastName?: string): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "makeName", 1, POST_TIMEOUT_IN_MS, callContextData, 
@@ -131,32 +167,50 @@ export namespace Test
             IC.arg("lastName?", lastName));
     }
 
-    /********* Function returning number */
+    /**
+     * *Note: The result (number) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function returning number
+     */
     export function return_number_PostFork(callContextData: any, strvalue: string): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
     }
 
-    /********* Function returning number */
+    /**
+     * *Note: The result (number) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function returning number
+     */
     export function return_number_PostImpulse(callContextData: any, strvalue: string): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "return_number", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("strvalue", strvalue));
     }
 
-    /********* Function returning string */
+    /**
+     * *Note: The result (string) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function returning string
+     */
     export function returnstring_PostFork(callContextData: any, numvalue: number): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
     }
 
-    /********* Function returning string */
+    /**
+     * *Note: The result (string) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function returning string
+     */
     export function returnstring_PostImpulse(callContextData: any, numvalue: number): void
     {
         IC.postImpulse(DESTINATION_INSTANCE_NAME, "returnstring", 1, POST_TIMEOUT_IN_MS, callContextData, IC.arg("numvalue", numvalue));
     }
 
-    /********* Function with missing types ****
-     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function with missing types ****
      * Function with missing type information
      */
     export function fnWithMissingType_PostFork(callContextData: any, p1: any, p2: number): void
@@ -166,8 +220,10 @@ export namespace Test
             IC.arg("p2", p2));
     }
 
-    /********* Function with missing types ****
-     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * ******* Function with missing types ****
      * Function with missing type information
      */
     export function fnWithMissingType_PostImpulse(callContextData: any, p1: any, p2: number): void
