--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlers_Generated_Consumer.g.ts.cmp
@@ -11,16 +11,20 @@ let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
 export namespace Test
 {
-    /** Fake Event Handler due to case in the name so this will be generated
-     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * Fake Event Handler due to case in the name so this will be generated
      */
     export function onbecomingprimary_PostFork(callContextData: any): void
     {
         IC.postFork(DESTINATION_INSTANCE_NAME, "onbecomingprimary", 1, POST_TIMEOUT_IN_MS, callContextData);
     }
 
-    /** Fake Event Handler due to case in the name so this will be generated
-     * Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * Fake Event Handler due to case in the name so this will be generated
      */
     export function onbecomingprimary_PostImpulse(callContextData: any): void
     {
