--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_MiscTests_Generated_Consumer.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_MiscTests_Generated_Consumer.g.ts.cmp
@@ -9,10 +9,14 @@ import Utils = Ambrosia.Utils;
 let DESTINATION_INSTANCE_NAME: string = "server";
 let POST_TIMEOUT_IN_MS: number = 8000; // -1 = Infinite
 
+/**
+Test File of misc tests. If find a theme or grouping then move out of this file into separate file
+ */
 export namespace Test
 {
     /**
-     * Note: The result ({ r1: string, r2: string }) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+     * *Note: The result ({ r1: string, r2: string }) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
      * Correctly handle line-breaks and comments
      */
     export function myComplexReturnFunction_PostFork(callContextData: any): void
@@ -21,7 +25,8 @@ export namespace Test
     }
 
     /**
-     * Note: The result ({ r1: string, r2: string }) produced by this post method is received via the PostResultDispatcher provided to IC.start().
+     * *Note: The result ({ r1: string, r2: string }) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
      * Correctly handle line-breaks and comments
      */
     export function myComplexReturnFunction_PostImpulse(callContextData: any): void
