--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedPublisherFramework.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_EventHandlerWarnings_GeneratedPublisherFramework.g.ts.cmp
@@ -36,7 +36,10 @@ export namespace State
         }
     }
 
-    /** Only assign this using the return value of IC.start(), and [if not using the generated checkpointConsumer()] in the 'onFinished' callback of an IncomingCheckpoint object. */
+    /**
+     * Only assign this using the return value of IC.start(), the return value of the upgrade() method of your AmbrosiaAppState
+     * instance, and [if not using the generated checkpointConsumer()] in the 'onFinished' callback of an IncomingCheckpoint object.
+     */
     export let _appState: AppState = null;
 }
 
@@ -79,7 +82,7 @@ export function messageDispatcher(message: Messages.DispatchedMessage): void
     //         If Rule #1 is followed, the app is automatically in compliance with Rule #2.
     // Reason: Unless your application has a way to capture (and rehydrate) runtime execution state (specifically the message handler stack) in the serialized
     //         application state (checkpoint), recovery of the checkpoint will not be able to complete the in-flight message handlers. But if there are no 
-    //         in-flight handlers at the time the checkpoint is taken (because they all complete), then the problem of how to complete them during recovery is moot. 
+    //         in-flight handlers at the time the checkpoint is taken (because they all completed), then the problem of how to complete them during recovery is moot. 
     //
     // Rule 3: Avoid sending too many messages in a single message handler.
     // Reason: Because a message handler always has to run to completion (see Rule #1), if it runs for too long it can monopolize the system leading to performance issues.
@@ -128,9 +131,11 @@ function dispatcher(message: Messages.DispatchedMessage): void
                                     break;
                                 
                                 default:
-                                    let errorMsg: string = `Post method '${methodName}' is not implemented`;
-                                    Utils.log(`(${errorMsg})`, loggingPrefix)
-                                    IC.postError(rpc, new Error(errorMsg));
+                                    {
+                                        let errorMsg: string = `Post method '${methodName}' is not implemented`;
+                                        Utils.log(`(${errorMsg})`, loggingPrefix)
+                                        IC.postError(rpc, new Error(errorMsg));
+                                    }
                                     break;
                             }
                         }
@@ -144,7 +149,7 @@ function dispatcher(message: Messages.DispatchedMessage): void
                     // Code-gen: Fork/Impulse method handlers will go here
                     
                     default:
-                        Utils.log(`(No method is associated with methodID ${rpc.methodID})`, loggingPrefix)
+                        Utils.log(`Error: Method dispatch failed (reason: No method is associated with methodID ${rpc.methodID})`);
                         break;
                 }
                 break;
@@ -179,7 +184,7 @@ function dispatcher(message: Messages.DispatchedMessage): void
                     case Messages.AppEventType.UpgradeStateAndCode:
                         // TODO: Add an exported [non-async] function 'onUpgradeStateAndCode(upgradeMode: Messages.AppUpgradeMode): void' to ./JS_CodeGen_TestFiles/TS_EventHandlerWarnings.ts, then (after the next code-gen) a call to it will be generated here
                         // Note: You will need to import Ambrosia to ../../AmbrosiaTest/JSCodeGen/JS_CodeGen_TestFiles/TS_EventHandlerWarnings.ts in order to reference the 'Messages' namespace.
-                        //       Also, your handler should call IC.upgrade() [to upgrade code] and _appState.upgrade() [to upgrade state].
+                        //       Also, your handler MUST call IC.upgrade() [to upgrade code] and the upgrade() method of your AmbrosiaAppState instance [to upgrade state].
                         break;
 
                     case Messages.AppEventType.IncomingCheckpointStreamSize:
